<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Favorite App</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="detail_vote">%1$s/10</string>
    <string name="list_contents">%1$s</string>
    <string name="list_year">(%1$s)</string>
    <string name="menu_title_lang_setting">Languange Setting</string>
    <string name="img_poster_desc">This is poster of the movie or tv show</string>
    <string name="ic_star_desc">This is star icon</string>
    <string name="fav_movie_empty">There is no Favorite Movie</string>
    <string name="fav_tvshow_empty">There is no Favorite TV Show</string>
    <string name="image_is_not_available">Image is not available yet</string>
    <string name="dash_for_null">-</string>
    <string name="not_available_yet">Not available yet</string>
</resources>
