<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_poster_desc"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lbl_img_not_available"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/image_is_not_available"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:lines="2"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_poster"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/MovieTitle"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ibm_plex_sans_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ibm_plex_sans_bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:text="@string/dash_for_null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/txt_title"
                tools:text="(2018)" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="6dp"
                android:lines="3"
                android:text="@string/not_available_yet"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/txt_year"
                tools:text="Method does not have to physically delete rows from your data storage. If you are using a sync adapter with your provider, you should consider marking a deleted row with a delete flag rather than removing the row entirely. The sync adapter can check for deleted rows and remove them from the server before deleting them from the provider" />

            <ImageView
                android:id="@+id/ic_star"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/ic_star_desc"
                android:src="@drawable/ic_star_gold_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txt_score"
                style="@style/ContentDetailBold"
                android:layout_marginTop="0dp"
                android:textSize="15sp"
                android:visibility="visible"
                android:fontFamily="@font/ibm_plex_sans_bold"
                android:text="@string/dash_for_null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_star"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7.9/10" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="24dp"
                app:constraint_referenced_ids="ic_star,txt_score"
                app:flow_horizontalGap="4dp"
                app:flow_maxElementsWrap="2"
                app:flow_wrapMode="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>